force-app/main/default/objects/HR_Worker_Information__c/HR_Worker_Information__c.object-meta.xml
<CustomObject>
    <label>HR Worker Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Worker Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>