force-app/main/default/objects/HR_Worker_Information__c/fields/Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID__c</fullName>
    <description>PE/ Manager WFM record ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Manager ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>