force-app/main/default/objects/HR_Worker_Information__c/fields/People_Empowerer__c.field-meta.xml
<CustomField>
    <fullName>People_Empowerer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>People Empowerer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>