force-app/main/default/objects/HR_Worker_Information__c/fields/Time_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>